--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,12 @@
   "exports": {
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./code": "./src/code.tsx",
+    "./navbar": "./src/navbar.tsx",
+    "./categoryBar": "./src/categoryBar.tsx",
+    "./productCard": "./src/productCard.tsx",
+    "./sidebar": "./src/sidebar.tsx",
+    "./cartSidebar": "./src/cartSidebar.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -15,11 +20,14 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@turbo/gen": "^1.12.4",
-    "@types/node": "^20.11.24",
     "@types/eslint": "^8.56.5",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "5.5.4"
   },
   "dependencies": {
